docs 📝: Improved SEO by adding new meta tags, updating existing ones, adding JSON-LD script, and linking to canonical URL.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Horvitz</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
-    <script src="/src/index.jsx" type="module"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Основные мета-теги -->
+  <meta name="title" content="Leonid Dyachenko (Horvitz) - SRE Инженер">
+  <meta name="description"
+    content="Опытный SRE Инженер из Ростова-на-Дону. Специализируюсь на Python, JavaScript, Go и Rust. Эксперт в Linux, Docker, Kubernetes и облачных технологиях.">
+
+  <!-- Расширенные SEO теги -->
+  <meta name="keywords"
+    content="SRE Инженер, Python, JavaScript, Go, Rust, Linux, Docker, Kubernetes, Облачные вычисления, Веб-разработка, Ростов-на-Дону, Программирование, Leonid Dyachenko, Horvitz">
+  <meta name="subject" content="SRE Инженер и разработчик программного обеспечения">
+  <meta name="rating" content="General">
+  <meta name="copyright" content="© 2024 Leonid Dyachenko">
+
+  <!-- Геолокация -->
+  <meta name="geo.region" content="RU-ROS">
+  <meta name="geo.placename" content="Ростов-на-Дону">
+  <meta name="geo.position" content="47.233222;39.723889">
+  <meta name="ICBM" content="47.233222, 39.723889">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="profile">
+  <meta property="og:url" content="https://horvitz.ru">
+  <meta property="og:title" content="Leonid Dyachenko (Horvitz) - SRE Инженер">
+  <meta property="og:description"
+    content="SRE Инженер и разработчик с опытом работы в области облачных и распределенных систем. Студент Ростовского колледжа связи и информатики.">
+  <meta property="og:image" content="https://horvitz.ru/assets/cat.jpg">
+  <meta property="og:locale" content="ru_RU">
+  <meta property="og:site_name" content="Визитка Леонида Дьяченко">
+  <meta property="profile:first_name" content="Leonid">
+  <meta property="profile:last_name" content="Dyachenko">
+  <meta property="profile:username" content="horvitz">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://horvitz.ru">
+  <meta name="twitter:title" content="Leonid Dyachenko (Horvitz) - SRE Инженер | Разработчик">
+  <meta name="twitter:description"
+    content="Профессиональный SRE Инженер, специализирующийся на Python, JavaScript, Go, Rust. Эксперт в области Linux, Docker, Kubernetes. Базируюсь в Ростове-на-Дону.">
+  <meta name="twitter:image" content="https://horvitz.ru/assets/cat.jpg">
+<meta name=" twitter:creator" content="@horvitz">
+  <meta name="twitter:site" content="@horvitz">
+
+  <!-- Личные данные -->
+  <meta name="author" content="Leonid Dyachenko">
+  <meta name="contact" content="horvitz@dvorfs.ru">
+  <meta name="location" content="Ростов-на-Дону, Россия">
+
+  <!-- Язык и локализация -->
+  <meta name="language" content="ru, en">
+  <meta name="robots" content="index, follow">
+
+  <!-- Канонический адрес -->
+  <link rel="canonical" href="https://horvitz.ru">
+
+  <!-- Favicon и аппаратные теги -->
+  <link rel="icon" type="image/png" href="./assets/favicon.ico">
+  <link rel="apple-touch-icon" href="./assets/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Leonid Dyachenko">
+
+  <!-- Теги безопасности -->
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
+  <!-- Связь с другими профилями -->
+  <link rel="me" href="https://t.me/horvitz">
+  <link rel="me" href="https://vk.com/horvitz">
+
+  <!-- JSON-LD для структурированных данных -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Leonid Dyachenko",
+    "alternateName": "Horvitz",
+    "jobTitle": "SRE Engineer",
+    "url": "https://horvitz.ru",
+    "sameAs": [
+      "https://t.me/horvitz",
+      "https://vk.com/horvitz"
+    ],
+    "email": "horvitz@dvorfs.ru",
+    "location": {
+      "@type": "City",
+      "name": "Ростов-на-Дону"
+    }
+  }
+  </script>
+  <title>Horvitz</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <script src="/src/index.jsx" type="module"></script>
+</body>
+
 </html>
