feat ✨: Update favicon links to use absolute path and add company name as HTML link in index.html

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <link rel="canonical" href="https://horvitz.ru">
 
   <!-- Favicon и аппаратные теги -->
-  <link rel="icon" type="image/png" href="./assets/favicon.ico">
-  <link rel="apple-touch-icon" href="./assets/favicon.ico">
+  <link rel="icon" type="image/png" href="/assets/favicon.ico">
+  <link rel="apple-touch-icon" href="/assets/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Leonid Dyachenko">
 
   <!-- Теги безопасности -->
