--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
   <script src="/src/index.jsx" type="module"></script>
   <script src="https://cdn.jsdelivr.net/gh/Alaev-Co/snowflakes/dist/Snow.min.js"></script>
   <script>
-    new Snow();
+    new Snow(
+      {
+        snowBallIterationsInterval: 250
+      }
+    );
   </script>
 </body>
 
