--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
 
   <script src="/src/index.jsx" type="module"></script>
   <script src="https://cdn.jsdelivr.net/gh/Alaev-Co/snowflakes/dist/Snow.min.js"></script>
+  <script>
+    new Snow(
+      {
+        snowBallIterationsInterval: 250
+      }
+    );
+  </script>
 </body>
 
 </html>
