--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
   <link rel="apple-touch-icon" href="/src/assets/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Leonid Dyachenko">
 
+  <!-- Теги безопасности -->
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
   <!-- Связь с другими профилями -->
   <link rel="me" href="https://t.me/horvitz">
   <link rel="me" href="https://vk.com/horvitz">
