feat ✨: Add link rel=preload for image in order to improve page loading performance

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <link rel="icon" type="image/png" href="/src/assets/favicon.ico">
   <link rel="apple-touch-icon" href="/src/assets/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Leonid Dyachenko">
+  <link rel="preload" as="image" href="https://s3.dvorfs.com/horvitz-site/cat.jpg">
 
   <!-- Теги безопасности -->
   <meta name="referrer" content="strict-origin-when-cross-origin">
