--- a/index.html
+++ b/index.html
@@ -97,19 +97,12 @@
   <link href="https://cdn.jsdelivr.net/gh/Alaev-Co/snowflakes/dist/snow.min.css" rel="stylesheet">
 </head>
 
-<body style='overflow-x:hidden;'>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+<body>
+  <noscript>Чтобы запустить это приложение, необходимо включить JavaScript.</noscript>
+  <main id="root"></div>
 
   <script src="/src/index.jsx" type="module"></script>
   <script src="https://cdn.jsdelivr.net/gh/Alaev-Co/snowflakes/dist/Snow.min.js"></script>
-  <script>
-    new Snow(
-      {
-        snowBallIterationsInterval: 250
-      }
-    );
-  </script>
 </body>
 
 </html>
