--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,9 @@
 <html lang=%lang%>
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/images/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="%sveltekit.assets%/styles/app.css" rel="stylesheet" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
