--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="%sveltekit.assets%/styles/app.css" rel="stylesheet" />
 		%sveltekit.head%
+		<title>Horvitz</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
