--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="%sveltekit.assets%/styles/app.css" rel="stylesheet" />
 		%sveltekit.head%
-		<title>Horvitz</title>
+		<title>Sabbath</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
